重构PetService, 优化实现方式, 修复Test